[package]
name = "ppjson"
description = "Partially parse JSON. Like if it gets cut off half way through, still output something useful."
version = "0.1.0"
authors = ["Jeremy Wells <jemmyw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
